# brew-mcp

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
cmd/: server.go
internal/logger/: logger.go
pkg/brew/: config.go  info.go  install.go  list_installed_packages_and_versions.go  search.go  uninstall.go  upgrade.go
pkg/mcp/: manager.go
pkg/mcp/brew/: brew.go  get_package_version.go  update.go
src/: flag.rs  main.rs
src/brew/: cli.rs
