[package]
name = "brew-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.5"
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread"]  }
log = "0.4.22"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
